# LLM-AoI-Optimization

./: .env_example  .gitignore  README.md  misc.ipynb  pyproject.toml  requirements.txt
config/: agent_config.yaml  system_config.yaml
data/: dqn_data_samples_20251201.csv  dqn_data_samples_dmax_1750.csv  dqn_data_samples_dmax_2250.csv  dqn_data_samples_queue_limit_10.csv  dqn_data_samples_queue_limit_14.csv  dqn_results_20251201.csv  dqn_results_dmax_1750.csv  dqn_results_dmax_2250.csv  dqn_results_queue_limit_10.csv  dqn_results_queue_limit_14.csv
eoh_results/logs/: best_so_far.csv  individual_metrics.csv
eoh_results/pops/: population_generation_0.json  population_generation_1.json  population_generation_2.json  population_generation_3.json  population_generation_4.json
eoh_results/pops_best/: population_generation_2.json  population_generation_3.json
eval_results/: aggregate_means.json  dqn_eval.csv  dqn_heuristic_eval.csv  greedy_expected_time_eval.csv  greedy_nearest_eval.csv
eval_results/dmax_1750/: dqn_eval.csv  dqn_heuristic_eval.csv  greedy_expected_time_eval.csv  greedy_nearest_eval.csv
eval_results/dmax_2250/: dqn_eval.csv  dqn_heuristic_eval.csv  greedy_expected_time_eval.csv
eval_results/queue_limit_10/: dqn_eval.csv  dqn_heuristic_eval.csv  (+2 more)
models/: dqn_baseline_20251126.pth  dqn_baseline_20251127.pth  dqn_baseline_20251201.pth  dqn_baseline_dmax_1750.pth  dqn_baseline_dmax_2250.pth  dqn_baseline_queue_limit_10.pth  dqn_baseline_queue_limit_14.pth
src/: convergence_plot.py  env.py  env_classes.py  evaluate.py  system_classes.py
(+66 files in other folders)
