[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_aoi_optimization"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "~=3.10.0"
authors = [
    { name = "Le Hoang Lan", email = "lelan210420@gmail.com" }
]
dynamic = ["dependencies"]

[tool.setuptools]
include-package-data = true
packages = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}